--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="/img/etiopia_suszenie.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/96636_kulczycki-kafe.jpg" class="d-block w-100" alt="...">
+          <img src="https://raw.githubusercontent.com/MaksymAntoniuk/CoffeeCup/main/img/1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="/img/kawiarnia-florian.webp" class="d-block w-100" alt="...">
