--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="/img/etiopia_suszenie.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="https://raw.githubusercontent.com/MaksymAntoniuk/CoffeeCup/main/img/1.jpg" class="d-block w-100" alt="...">
+          <img src="/img/96636_kulczycki-kafe.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="/img/kawiarnia-florian.webp" class="d-block w-100" alt="...">
@@ -136,7 +136,7 @@
       <div class="justify-content-center" ><h1 class="text-center" style="margin-top: 5px; width: 80%; max-width: 700px;">Cappuccino</h1></div>
   <div class="row justify-content-center my-5" id="cappuccino">
     <div class="card" style="width: 80%; max-width: 700px;">
-      <img src="/img/cappucino.jpeg" style="margin: 5px;" class="card-img-top" alt="...">
+      <img src="img/cappucino.jpeg" style="margin: 5px;" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Cappuccino - to kawa, która składa się z połowy espresso, połowy mleka spienionego i odrobiną mleka parzonego. Cappuccino często jest podawane z dodatkiem cynamonu lub kakao na wierzchu.</p>
       </div>
