--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
             <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/etiopia_suszenie.jpg" class="d-block w-100" alt="...">
+          <img src="img/etiopia_suszenie.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/96636_kulczycki-kafe.jpg" class="d-block w-100" alt="...">
+          <img src="img/96636_kulczycki-kafe.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/img/kawiarnia-florian.webp" class="d-block w-100" alt="...">
+          <img src="img/kawiarnia-florian.webp" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -127,7 +127,7 @@
     
   <div class="row justify-content-center my-5" >
     <div class="card" style="width: 80%; max-width: 700px;" id="espresso">
-      <img src="/img/espresso.jpeg" style="margin: 5px;" class="card-img-top" alt="...">
+      <img src="img/espresso.jpeg" style="margin: 5px;" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Espresso - jest to mocna, skondensowana kawa, przygotowywana za pomocą specjalnego ekspresu, który wytwarza ciśnienie wody, aby przepłukać ziarna kawy. Espresso jest podstawą dla wielu innych rodzajów kaw.</p>
       </div>
@@ -145,7 +145,7 @@
       <div class="justify-content-center" ><h1 class="text-center" style="margin-top: 5px;">Latte</h1></div>
   <div class="row justify-content-center my-5" id="latte">
     <div class="card" style="width: 80%; max-width: 700px;">
-      <img src="/img/latte.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
+      <img src="img/latte.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Latte - jest to kawa, która składa się z jednej części espresso i trzech części mleka spienionego. Latte często podaje się z dodatkiem syropu smakowego, takiego jak wanilia, karmel lub migdał.</p>
       </div>
@@ -154,7 +154,7 @@
       <div class="justify-content-center" ><h1 class="text-center" style="margin-top: 5px;">Flat white</h1></div>
   <div class="row justify-content-center my-5" id="flat">
     <div class="card" style="width: 80%; max-width: 700px;">
-      <img src="/img/Flat_white.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
+      <img src="img/Flat_white.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Flat white - to kawa, która składa się z jednej części espresso i dwóch części mleka spienionego. Flat white jest popularny w Australii i Nowej Zelandii.</p>
       </div>
@@ -163,7 +163,7 @@
       <div class="justify-content-center" ><h1 class="text-center" style="margin-top: 5px;">Americano</h1></div>
   <div class="row justify-content-center my-5" id="americano">
     <div class="card" style="width: 80%; max-width: 700px;">
-      <img src="/img/americano.jpg" style="margin-top: 3px; " class="card-img-top" alt="...">
+      <img src="img/americano.jpg" style="margin-top: 3px; " class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Americano - to kawa, która składa się z jednej części espresso i trzech części gorącej wody. Americano ma łagodniejszy smak niż espresso, ponieważ jest bardziej rozcieńczony.</p>
       </div>
@@ -172,7 +172,7 @@
       <div class="justify-content-center" ><h1 class="text-center" style="margin-top: 5px;">Frappuccino</h1></div>
     <div class="row justify-content-center my-5" id="frappuccino">
     <div class="card" style="width: 80%; max-width: 700px;">
-      <img src="/img/Frappuccino.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
+      <img src="img/Frappuccino.jpeg" style="margin-top: 3px; " class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text justify-content-center">Frappuccino - to mrożona kawa, która składa się z espresso lub kawy rozpuszczalnej, mleka, lodu i syropu smakowego. Frappuccino jest często podawane z bitą śmietaną na wierzchu.</p>
       </div>
