--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <h1 class="text-center" style="margin-top: 10px;">O nas</h1>
             <p class="text-center ">Witajcie! Jesteśmy zespołem CoffeeCup - grupą pasjonatów kawy, którzy badają różne rodzaje kaw z całego świata. Nasza przygoda zaczęła się od małych prób, ale z czasem zaczęliśmy zgłębiać tajniki różnych technik parzenia i metod palenia ziaren kawy. Naszą misją jest poznawanie i eksperymentowanie z różnymi gatunkami kaw, aby pomóc naszym klientom odkryć nowe smaki i aromaty. Zapraszamy do odkrywania razem z nami tajemnic kawy!</p>
-            <img class="img-fluid" alt="new" src="/img/o-nas-03.jpg" width="1100" height="500">
+            <img class="img-fluid" alt="new" src="img/o-nas-03.jpg" width="1100" height="500">
         </div>
     </div>
 </div>
